--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "VAKELA",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "loading-cli": "^1.1.2",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.23.0"
